# launcher-cli

./: Cargo.toml  README.md
src/: dirs.rs  main.rs  profile.rs  version.rs
src/command/: new.rs  run.rs
