[package]
name = "launcher-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
clap = "4.5.27"
crossterm = "0.28.1"
dirs = "6.0.0"
env_logger = "0.11.6"
futures = "0.3.31"
log = "0.4.25"
reqwest = "0.12.12"
serde_json = "1.0.138"
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["rt"] }
